Update project configuration
Rename `nuxt.config.js` to `nuxt.config.ts`.

Move all the project source files to a `src` directory, and update the
`srcDir` attribute in the nuxt.config.ts.

Add a `.vscode/settings.json` file with the following workspace settings
to force prettier to format files on save.

Update prettier config.

Add vue-property-decorator package & update homepage component
definition.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@nuxt/content": "^1.9.0",
     "@nuxt/typescript-runtime": "^2.0.0",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "vue-property-decorator": "^9.0.2"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.6",
