--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxt/typescript-runtime": "^2.0.0",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
+    "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.0.2"
   },
   "devDependencies": {
