--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxt/content": "^1.9.0",
     "@nuxt/typescript-runtime": "^2.0.0",
     "core-js": "^3.6.5",
+    "luxon": "^1.25.0",
     "nuxt": "^2.14.6",
     "vue-class-component": "^7.2.6",
     "vue-property-decorator": "^9.0.2"
@@ -33,6 +34,7 @@
     "@nuxtjs/eslint-config-typescript": "^3.0.0",
     "@nuxtjs/eslint-module": "^2.0.0",
     "@nuxtjs/tailwindcss": "^3.1.0",
+    "@types/luxon": "^1.25.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
