--- a/src/static/admin/config.yml
+++ b/src/static/admin/config.yml
@@ -2,20 +2,27 @@ backend:
   name: git-gateway
   branch: master
 
-media_folder: static/img
+media_folder: src/static/img
 public_folder: /img
 
 collections:
   - name: 'blog'
     label: 'Blog'
-    format: 'json'
-    folder: 'content/blog'
+    extension: 'md'
+    folder: 'src/content/blog'
     create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: '{{slug}}'
     editor:
       preview: false
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
+      - { label: 'Teaser Text', name: 'teaser', widget: 'string' }
+      - {
+          label: 'Feature Image',
+          name: 'featureImage',
+          widget: 'image',
+          allow_multiple: false,
+        }
       - { label: 'Body', name: 'body', widget: 'markdown' }
